--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "typeface-montserrat": "0.0.54"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER='firefox' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
