--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
+    "serve": "^9.2.0",
     "typeface-montserrat": "0.0.54"
   },
   "scripts": {
-    "start": "BROWSER='firefox' react-scripts start",
+    "start": "react-scripts start",
+    "now-start": "serve --single ./build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
